--- a/escola/templates/disciplinar/registrar_rfo.html
+++ b/escola/templates/disciplinar/registrar_rfo.html
@@ -278,7 +278,7 @@
     container.addEventListener('click', onContainerClick);
   } else {
     document.addEventListener('click', function(e){
-      if (e.target.closest && !e\.target\.closest\('\#alunos-container'\)\ &&\ \(e\.target\.closest\('\.add-aluno-btn'\)\ \|\|\ e\.target\.closest\('\.remove-aluno-btn'\)\)) {
+      if (e.target && e.target.closest && (e.target.closest('.add-aluno-btn') || e.target.closest('.remove-aluno-btn'))) {
         onContainerClick(e);
       }
     });
@@ -755,3 +755,5 @@ document.addEventListener('DOMContentLoaded', function(){
   });
 })();
 </script>
+
+<script src="/static/js/tratar-handler.js"></script>
